<resources>
    <string name="app_name">Cupcake</string>
    <string name="order_cupcakes">Order Cupcakes</string>
    <string name="one_cupcakes">One Cupcakes</string>
    <string name="six_cupcakes">Six Cupcakes</string>
    <string name="twelve_cupcakes">Twelve Cupcakes</string>
    <string name="choose_flavour">Choose Flavour</string>
    <string name="choose_pickup_date">Choose PickUp Date</string>
    <string name="order_summary">Order Summary</string>
    <string name="vanilla_flavour">Vanilla</string>
    <string name="red_velvet_flavour">Red Velvet</string>
    <string name="coffee_flavour">Coffee Flavour</string>
    <string name="next">Next</string>
    <string name="quantity">Quantity</string>
    <string name="flavour">Flavour</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="send">Send</string>
    <string name="subtotal_price">SubTotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="cancel">Cancel</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s \n Flavor: %2$s \nPickup date: %3$s \nTotal: %4$s \n\n Thank you!</string>
    <plurals name="cupcakes">
        <item quantity="one">%d cupcake</item>
        <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>