<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">
    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.ordercupcake.ui.fragments.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_chooseFlavour"
            app:destination="@id/chooseFlavourFragment" />
    </fragment>
    <fragment
        android:id="@+id/chooseFlavourFragment"
        android:name="com.example.ordercupcake.ui.fragments.ChooseFlavourFragment"
        android:label="@string/choose_flavour"
        tools:layout="@layout/fragment_choose_flavour">
        <action
            android:id="@+id/action_chooseFlavour_to_pickUpFragment"
            app:destination="@id/pickUpFragment" />
        <action
            android:id="@+id/action_chooseFlavourFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/pickUpFragment"
        android:name="com.example.ordercupcake.ui.fragments.PickUpFragment"
        android:label="@string/choose_pickup_date"
        tools:layout="@layout/fragment_pickup">
        <action
            android:id="@+id/action_pickUpFragment_to_summaryFragment"
            app:destination="@id/summaryFragment" />
        <action
            android:id="@+id/action_pickUpFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/summaryFragment"
        android:name="com.example.ordercupcake.ui.fragments.SummaryFragment"
        android:label="@string/order_summary"
        tools:layout="@layout/fragment_summary" >
        <action
            android:id="@+id/action_summaryFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>