<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="summaryFragment"
            type="com.example.ordercupcake.ui.fragments.SummaryFragment" />

        <variable
            name="orderViewModel"
            type="com.example.ordercupcake.model.OrderViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SummaryFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quantity_label"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textAllCaps="true"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/quantity"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@{orderViewModel.quantity.toString()}"
                    tools:text="6 cupcakes" />

                <View
                    android:id="@+id/divider1"
                    style="@style/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginBottom="@dimen/margin_20dp" />

                <TextView
                    android:id="@+id/flavor_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flavour" />

                <TextView
                    android:id="@+id/flavor"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@{orderViewModel.flavour}"
                    tools:text="Chocolate" />

                <View
                    android:id="@+id/divider2"
                    style="@style/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginBottom="@dimen/margin_20dp" />

                <TextView
                    android:id="@+id/pickup_label"
                    style="@style/Widget.Cupcake.TextView.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pickup_date" />

                <TextView
                    android:id="@+id/date"
                    style="@style/Widget.Cupcake.TextView.OrderSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@{orderViewModel.date}"
                    tools:text="Sunday" />

                <View
                    android:id="@+id/divider3"
                    style="@style/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_20dp" />

                <TextView
                    android:id="@+id/total"
                    style="@style/Widget.Cupcake.TextView.FinalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@{@string/total_price(orderViewModel.price)}"
                    tools:text="Total $5.00" />

            </LinearLayout>

            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:onClick="@{()->summaryFragment.sendOrder()}"
                android:text="@string/send" />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                android:onClick="@{()->summaryFragment.cancelOrder()}"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</layout>